<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- BVApp-Comment: 24/Jan/2015: Bhakti Vriksha application specific menu items. -->
    <!-- BVApp menu items start -->
    <item
        android:id="@+id/logout_action"
        android:icon="@drawable/logout"
        android:title="@string/logout"/>

    <item
        android:id="@+id/change_password_action"
        android:icon="@drawable/change_pswd"
        android:title="@string/change_password"/>

    <item
        android:id="@+id/technical_support_action"
        android:icon="@drawable/tech_support"
        android:title="@string/contact_technical_support"/>
    <!-- BVApp menu items end -->

     <item android:id="@+id/manual_sync"          
          android:title="@string/manual_sync"
          android:icon="@drawable/cloud_refresh"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/add_bookmark"
          android:title="@string/add_bookmark"
          android:icon="@drawable/bookmark_add"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/profile_day"          
          android:title="@string/profile_day"
          android:icon="@drawable/sun"
          android:showAsAction="ifRoom"
          />
          
    <item android:id="@+id/profile_night"          
          android:title="@string/profile_night"
          android:icon="@drawable/moon"
          android:showAsAction="ifRoom"
          />                 
    
    <item android:id="@+id/open_file"          
          android:title="@string/open_file"
          android:icon="@drawable/file"
          />
    
     <item android:id="@+id/search_text"          
          android:title="@string/search_text"
          android:icon="@drawable/zoom"
          android:orderInCategory="0"
          android:actionViewClass="com.actionbarsherlock.widget.SearchView"
          android:showAsAction="always|collapseActionView" />



	<item android:id="@+id/text_to_speech"          
          android:title="@string/text_to_speech"
          android:icon="@drawable/speech_balloon" 
          android:enabled="false"
          />

    <item android:id="@+id/rolling_blind"
          android:title="@string/rolling_blind"
          android:icon="@drawable/play" />

    <item android:id="@+id/about"          
          android:title="@string/about"
          android:icon="@drawable/info" />  
               
</menu>
