<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resendAccountActivationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/translucent_black"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/resendAccountActivationForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:id="@+id/requestForResendAccountActivationNotesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/notes_request_for_resend_account_activation_details"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/resendAccountActivationNotesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/notes_resend_account_activation_details"
            android:textColor="@color/gray" />

        <AutoCompleteTextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_login_email_address"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_value_max_length"
            android:maxLines="1"
            android:singleLine="true">

            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/resendAccountActivationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/resend_account_activation_details" />

        <Button
            android:id="@+id/activateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/go_to_activate_account" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/back_to_login" />
    </LinearLayout>

</ScrollView>