<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_layout_padding">

        <AutoCompleteTextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_email_address"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_value_max_length"
            android:maxLines="1"
            android:singleLine="true">

            <requestFocus />
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_value_max_length"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/login" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/verifyAccountDetailsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/verify_account_details" />
    </LinearLayout>

</ScrollView>