<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resetPasswordView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPasswordForm"
        android:orientation="vertical"
        android:padding="20dp">

        <AutoCompleteTextView
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_login_email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/reset_password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/back_to_login" />
    </LinearLayout>

</ScrollView>