<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/changePasswordView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_black"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/changePasswordForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:id="@+id/changePasswordNotesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/info_change_password_due_to_login_with_temp_password"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/userIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text=""
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_old_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_value_max_length"
            android:maxLines="1"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_value_max_length"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/confirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_value_max_length"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:text="@string/back_to_login" />
    </LinearLayout>

</ScrollView>